--- a/references.bib
+++ b/references.bib
@@ -103,15 +103,6 @@ doi = {10.2139/ssrn.3159123}
   pages     = {362--380}
 }
 
-@article{marmer,
-  author    = {Marmer, M. and Herrmann, B. L. and Dogrultan, E. and Berman, R. and Eesley, C. and Blank, S.},
-  title     = {Startup Genome Report Extra: Premature Scaling},
-  journal   = {Startup Genome},
-  year      = {2011},
-  volume    = {10},
-  pages     = {1--56}
-}
-
 @misc{gemma2024pali,
       title={PaliGemma: A versatile 3B VLM for transfer}, 
       author={Lucas Beyer and Andreas Steiner and André Susano Pinto and Alexander Kolesnikov and Xiao Wang and Daniel Salz and Maxim Neumann and Ibrahim Alabdulmohsin and Michael Tschannen and Emanuele Bugliarello and Thomas Unterthiner and Daniel Keysers and Skanda Koppula and Fangyu Liu and Adam Grycner and Alexey Gritsenko and Neil Houlsby and Manoj Kumar and Keran Rong and Julian Eisenschlos and Rishabh Kabra and Matthias Bauer and Matko Bošnjak and Xi Chen and Matthias Minderer and Paul Voigtlaender and Ioana Bica and Ivana Balazevic and Joan Puigcerver and Pinelopi Papalampidi and Olivier Henaff and Xi Xiong and Radu Soricut and Jeremiah Harmsen and Xiaohua Zhai},
@@ -503,6 +494,41 @@ doi = {10.1016/S0883-9026(96)00052-3}
   year={1990}
 }
 
+@misc{potanin2023startupsuccesspredictionvc,
+      title={Startup success prediction and VC portfolio simulation using CrunchBase data}, 
+      author={Mark Potanin and Andrey Chertok and Konstantin Zorin and Cyril Shtabtsovsky},
+      year={2023},
+      eprint={2309.15552},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2309.15552}, 
+}
+
+@misc{sharchilev2018web,
+  title={Web-based startup success prediction},
+  author={Sharchilev, Boris and Roizner, Michael and Rumyantsev, Andrey and Ozornin, Denis and Serdyukov, Pavel and de Rijke, Maarten},
+  booktitle={Proceedings of the 27th ACM international conference on information and knowledge management},
+  pages={2283--2291},
+  year={2018}
+}
+
+@article{retterath2020human,
+  title={Human versus computer: benchmarking venture capitalists and machine learning algorithms for investment screening},
+  author={Retterath, Andre},
+  journal={Available at SSRN 3706119},
+  year={2020}
+}
+
+@misc{su2023roformer,
+      title={RoFormer: Enhanced Transformer with Rotary Position Embedding}, 
+      author={Jianlin Su and Yu Lu and Shengfeng Pan and Ahmed Murtadha and Bo Wen and Yunfeng Liu},
+      year={2023},
+      eprint={2104.09864},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2104.09864}, 
+}
+
 @misc{ruder2017overviewgradientdescentoptimization,
       title={An overview of gradient descent optimization algorithms}, 
       author={Sebastian Ruder},
@@ -863,7 +889,7 @@ abstract = {This paper investigates actual Venture Capital (VC) decision making 
       url={https://arxiv.org/abs/1702.08734}, 
 }
 
-@report{marmer,
+@misc{marmer,
   title={Startup Genome Report Extra: Premature Scaling},
   author={Marmer, Matt and Herrmann, Ben L. and Dogrultan, E. and Berman, R. and Eesley, C.},
   year={2011},
@@ -1210,6 +1236,14 @@ simplicity, and wall-time.},
   year = 2003
 }
 
+@misc{huang2023networks,
+  title={Networks in Venture Capital Markets},
+  author={Huang, Can},
+  year={2023},
+  month={July},
+  abstract={This paper sheds light on the significant role of networks, particularly alumni networks, in venture capital markets. I leverage the instance of a new partner, carrying new alumni networks, entering a venture capital firm as a plausible exogenous adjustment to the VC’s alumni networks. This introduction of new alumni connections prompts an 8.21\% increase in investments of startups founded by alumni. This impact is more pronounced in markets characterized by high risk, or founders who are underrepresented minorities, women, or from less prestigious universities. Conversely, these alumni ties trigger a 22.93\% increase in failure rates, a 17.53\% decline in acquisition rates, and 66.45\% decline in IPO rates. Supplementary tests indicate that despite venture capitalists gaining better information from networks, the inherent preference for alumni startups offsets these advantages, leading to potential capital misallocation.},
+}
+
 @misc{hedderich2021survey,
   abstract = {Deep neural networks and huge language models are becoming omnipresent in natural language applications. As they are known for requiring large amounts of training data, there is a growing body of work to improve the performance in low-resource settings. Motivated by the recent fundamental changes towards neural models and the popular pre-train and fine-tune paradigm, we survey promising approaches for low-resource natural language processing. After a discussion about the different dimensions of data availability, we give a structured overview of methods that enable learning when training data is sparse. This includes mechanisms to create additional labeled data like data augmentation and distant supervision as well as transfer learning settings that reduce the need for target supervision. A goal of our survey is to explain how these methods differ in their requirements as understanding them is essential for choosing a technique suited for a specific low-resource setting. Further key aspects of this work are to highlight open issues and to outline promising directions for future research.},
   added-at = {2023-11-02T11:01:35.000+0100},
@@ -1227,6 +1261,31 @@ simplicity, and wall-time.},
   title = {A Survey on Recent Approaches for Natural Language Processing in Low-Resource Scenarios},
   url = {https://www.semanticscholar.org/paper/455cdafd55a5b5ddefa029bf97801327e142646d},
   year = 2020
+}
+
+@misc{cotterell2024formalaspectslanguagemodeling,
+      title={Formal Aspects of Language Modeling}, 
+      author={Ryan Cotterell and Anej Svete and Clara Meister and Tianyu Liu and Li Du},
+      year={2024},
+      eprint={2311.04329},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2311.04329}, 
+}
+
+@article{GOMPERS2020169,
+title = {How do venture capitalists make decisions?},
+journal = {Journal of Financial Economics},
+volume = {135},
+number = {1},
+pages = {169-190},
+year = {2020},
+issn = {0304-405X},
+doi = {https://doi.org/10.1016/j.jfineco.2019.06.011},
+url = {https://www.sciencedirect.com/science/article/pii/S0304405X19301680},
+author = {Paul A. Gompers and Will Gornall and Steven N. Kaplan and Ilya A. Strebulaev},
+keywords = {Venture capital, Value creation, Capital structure, Entrepreneurship},
+abstract = {We survey 885 institutional venture capitalists (VCs) at 681 firms to learn how they make decisions. Using the framework in Kaplan and Strömberg (2001), we provide detailed information on VCs’ practices in pre-investment screening (sourcing evaluating and selecting investments), in structuring investments, and in post-investment monitoring and advising. In selecting investments, VCs see the management team as somewhat more important than business-related characteristics such as product or technology although there is meaningful cross-sectional variation across company stage and industry. VCs also attribute the ultimate investment success or failure more to the team than to the business. While deal sourcing, deal selection, and post-investment value-added all contribute to value creation, the VCs rate deal selection as the most important of the three. We compare our results to those for chief financial officers (Graham and Harvey, 2001) and private equity investors (Gompers et al., 2016a).}
 }
 
 @misc{wang2023promptinglargelanguagemodels,
